[package]
name = "chronostore"
version = "0.0.1"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A system for storing time series data in memory."
keywords = ["time series", "timeseries", "series"]
documentation = "https://endoli.github.io/chronostore.rs/"
homepage = "https://github.com/endoli/chronostore.rs"
repository = "https://github.com/endoli/chronostore.rs"
edition = "2021"

[dependencies]
